fixed aligning of events-filter

--- a/src/app/main/component/user/components/profile/profile-dashboard/profile-dashboard.component.scss
+++ b/src/app/main/component/user/components/profile/profile-dashboard/profile-dashboard.component.scss
@@ -96,13 +96,12 @@ a {
 
 .events-filter {
   display: flex;
+  justify-content: center;
   justify-content: space-between;
-  margin-bottom: 10px;
 
   .events-types {
     * {
-      // margin: 0 5px;
-      margin: 0;
+      margin: 0 5px 0 5px;
       color: var(--primary-green);
     }
   }
